--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/form.css" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Symbols+Rounded" />
-	<title>Files</title>
+	<title>WebRTC Drive</title>
 	<script src="https://cdn.jsdelivr.net/npm/@open-ayame/ayame-web-sdk@2020.3.0/dist/ayame.js"></script>
 	<script src="js/webrtcfs-client.js"></script>
 	<script src="js/choice.js"></script>
@@ -27,10 +27,8 @@
 		</ul>
 		<ul id='search_list' class='popup' style='left:40px'></ul>
 		<ul id="option-menu" class='popup' style="right:4pt">
-			<li style="display:none"><a href="./readme.html">Readme</a></li>
-			<li style="display:none"><a href="./#list:volumes">Volumes</a></li>
-			<li style="display:none"><a href="vr/#" class="replaceUrlHash">VR Mode</a></li>
-			<li style="display:none"><a href="account.html">Account</a></li>
+			<li><a href="https://github.com/binzume/webrtcfs-web">GitHub</a></li>
+			<li><a href="/webrtc-rdp/">Add Storage</a></li>
 		</ul>
 	</header>
 
