--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<header>
 		<ul class="menubar">
 			<li id="menu-button" class="clickable">≡</li>
-			<li><a href="./">Files</a></li>
+			<li><a href="./">WebRTC Drive</a></li>
 			<li><form name="search"><input type="text" id="search_keyword" class="attach_right"
 				autocomplete="off" required /><button id="search_button" class="material-icons">search</button></form></li>
 			<li style="float:right"><button id="option-menu-button" class="rounded-button">...</button></li>
