--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 		</ul>
 		<ul id='search_list' class='popup' style='left:40px'></ul>
 		<ul id="option-menu" class='popup' style="right:4pt">
-			<li><a href="https://github.com/binzume/webrtcfs-web">GitHub</a></li>
-			<li><a href="/webrtc-rdp/">Add Storage</a></li>
+			<li><a href="https://github.com/binzume/webrtcfs-web" target="_blank">GitHub</a></li>
+			<li><a href="/webrtc-rdp/" target="_blank">Add Storage</a></li>
 		</ul>
 	</header>
 
