--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
 		</ul>
 
 		<div class="loading-spinner"></div>
+		<div id="file-info">
+			<div><span class="name"></span><button class="material-icons close-button rounded-button">close</button></div>
+			<div class="content"></div>
+		</div>
 		<div id="error"></div>
 	</div>
 
