--- a/index.html
+++ b/index.html
@@ -53,12 +53,17 @@
 			<button id="item-list-mode-button" class="rounded-button material-icons">view_list</button>
 			<button id="item-sort-order-button" class="rounded-button">&#x2193;</button>
 			<button id="item-sort-button" class="rounded-button"><span class="material-icons">sort</span><span id="item-sort-label"></span></button>
+			<button id="add-item-button" class="rounded-button"><span class="material-icons">add</span></button>
 		</div>
 		<ul id="sort-order-list" class='popup' style="right:8pt">
 			<li><button data-sort-order="updatedTime">Last modified</button></li>
 			<li><button data-sort-order="name">Name</button></li>
 			<li><button data-sort-order="size">Size</button></li>
 			<li><button data-sort-order="type">Type</button></li>
+		</ul>
+		<ul id="add-item-list" class='popup' style="right:8pt">
+			<li><button id='file-add-button'>File</button></li>
+			<li><button id='file-mkdir-button'>Folder</button></li>
 		</ul>
 
 		<ul class="grid" id="item-list">
