--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 	<meta name="theme-color" content="#0099ff" />
 	<link rel="icon" href="images/favicon.png" type="image/png" />
-	<link rel="stylesheet" type="text/css" href="css/choice.css" />
-	<link rel="stylesheet" type="text/css" href="css/form.css" />
+	<link rel="stylesheet" type="text/css" href="css/files.css" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Symbols+Rounded" />
 	<title>WebRTC Drive</title>
 	<script src="https://cdn.jsdelivr.net/npm/@open-ayame/ayame-web-sdk@2020.3.0/dist/ayame.js"></script>
 	<script src="js/webrtcfs-client.js"></script>
-	<script src="js/choice.js"></script>
+	<script src="js/files.js"></script>
 	<script src="js/webrtcfs.js"></script>
 	<script src="js/mp4player.js"></script>
 </head>
